Move to new url scheme

--- a/content/post/2015-02-15-pinba.md
+++ b/content/post/2015-02-15-pinba.md
@@ -2,7 +2,7 @@
 date: 2015-02-15T00:00:00Z
 published: true
 title: Доклад "Мониторинг проектов - от сервер до бразера"
-url: monitoring
+slug: monitoring
 categories:
 - Talks
 tags:
