--- a/content/post/2015-06-30-highload.md
+++ b/content/post/2015-06-30-highload.md
@@ -2,7 +2,7 @@
 date: 2015-06-30T00:00:00Z
 published: true
 title: Доклад "Что такое Highload?"
-url: highload
+slug: highload
 categories:
 - Talks
 tags:
