--- a/content/post/2017-09-09-linuxkit.md
+++ b/content/post/2017-09-09-linuxkit.md
@@ -2,7 +2,7 @@
 date: 2018-09-09T00:00:00Z
 published: true
 title: Доклад "LinuxKit - от контейнеров к VM"
-url: linuxkit
+slug: linuxkit
 categories:
 - Talks
 tags:
